# ramble

./: .gitignore  Cargo.toml  README.md  ramble.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cargo_build.yml  lint.yml  test_target_cpp.yml  test_target_rust.yml  test_targets.yaml  test_targets.yml
src/: codegen.rs  config.rs  consts.rs  lib.rs  main.rs  packet.rs  parse.rs  util.rs  utils.rs
src/codegen/: error.rs  generate.rs  target_c.rs  target_rust.rs  utils.rs
src/codegen/templates/cpp/: ramble.hpp.hbs
src/codegen/templates/rust/: ramble.rs.hbs
src/config/: error.rs  packet.rs  parse.rs  util.rs  utils.rs
src/targets/: generate.rs  mod.rs  target_c.rs  target_rust.rs
src/targets/templates/cpp/: ramble.hpp.hbs
src/targets/templates/rust/: ramble.rs.hbs
tests/: integration_test.rs  ramble.yaml
tests/cpp/: CMakeLists.txt  ramble.yaml  run_gen_tests.sh  run_tests.sh  test.cpp
tests/rust/: Cargo.toml  ramble.yaml  run_gen_tests.sh
tests/rust/src/: generated.rs  main.rs  ramble.rs
