[package]
name = "ramble"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ramble"
test = false
bench = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
convert_case = "0.7.1"
handlebars = "6.3.0"
json = "0.12.4"
log = "0.4.25"
paris = { version = "1.5.15", features = ["macros"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
yaml-rust2 = "0.9.0"

[dev-dependencies]
tempfile = "3.15.0"
